Fix bookmark spacing in  spotlight card

--- a/funnel/static/css/app.css
+++ b/funnel/static/css/app.css
@@ -2765,16 +2765,15 @@ a.loginbutton.hidden,
   transition: 200ms linear;
   -webkit-transition: 200ms linear;
 }
+.card--spotlight .card__body__location {
+  float: left;
+}
 .card--spotlight .card__body__bookmark {
   float: right;
-  position: relative;
-  top: 10px;
-  height: 0;
-  z-index: 4;
-  line-height: 1;
+  margin-top: 4px;
 }
 .card--spotlight .card__calendar {
-  padding: 0 0 25px;
+  padding: 0 0 40px;
 }
 .card--spotlight .card__image-wrapper {
   border-radius: 0 0 0 20px;
